@@ -1,14 +1,22 @@
 package org.openforis.collect.android.gui.input;
 
+import android.graphics.Paint;
 import android.support.v4.app.FragmentActivity;
+import android.view.View;
+import android.view.ViewGroup;
+import android.widget.Button;
+import android.widget.TextView;
+import org.apache.commons.lang3.StringUtils;
 import org.openforis.collect.android.CodeListService;
 import org.openforis.collect.android.SurveyService;
 import org.openforis.collect.android.gui.ServiceLocator;
+import org.openforis.collect.android.gui.detail.CodeListDescriptionDialogFragment;
 import org.openforis.collect.android.viewmodel.UiAttribute;
 import org.openforis.collect.android.viewmodel.UiCode;
 import org.openforis.collect.android.viewmodel.UiCodeAttribute;
 import org.openforis.collect.android.viewmodel.UiCodeList;
 
+import static android.view.ViewGroup.LayoutParams.WRAP_CONTENT;
 import static org.apache.commons.lang3.ObjectUtils.notEqual;
 
 /**
@@ -16,6 +24,7 @@ import static org.apache.commons.lang3.ObjectUtils.notEqual;
  */
 public abstract class CodeAttributeComponent extends AttributeComponent<UiCodeAttribute> {
     public static final int RADIO_GROUP_MAX_SIZE = 20;
+    private static final String DESCRIPTION_BUTTON_TAG = "descriptionButton";
     private UiCode parentCode;
     protected final CodeListService codeListService;
     protected UiCodeList codeList;
@@ -59,8 +68,46 @@ public abstract class CodeAttributeComponent extends AttributeComponent<UiCodeAt
         return false;
     }
 
+    private boolean containsDescription() {
+        for (UiCode code : codeList.getCodes())
+            if (StringUtils.isNotEmpty(code.getDescription()))
+                return true;
+        return false;
+    }
+
     protected void initCodeList() {
-        codeList = codeListService.codeList(attribute);
+        if (codeList == null) {
+            codeList = codeListService.codeList(attribute);
+            uiHandler.post(new Runnable() {
+                public void run() {
+                    if (containsDescription())
+                        includeDescriptionsButton();
+                }
+            });
+        }
+    }
+
+    private void includeDescriptionsButton() {
+        View inputView = toInputView();
+        ViewGroup parent = (ViewGroup) inputView.getParent();
+        if (parent.findViewWithTag(DESCRIPTION_BUTTON_TAG) == null) {
+            Button button = new Button(context);
+            button.setTextAppearance(context, android.R.style.TextAppearance_Small);
+            button.setTag(DESCRIPTION_BUTTON_TAG);
+            button.setLayoutParams(new ViewGroup.LayoutParams(WRAP_CONTENT, WRAP_CONTENT));
+            button.setText("Show code descriptions");
+            button.setBackgroundDrawable(null);
+            button.setPaintFlags(button.getPaintFlags() | Paint.UNDERLINE_TEXT_FLAG);
+            button.setOnClickListener(new View.OnClickListener() {
+                public void onClick(View v) {
+                    CodeListDescriptionDialogFragment.show(context.getSupportFragmentManager());
+                }
+            });
+            int linkColor = new TextView(context).getLinkTextColors().getDefaultColor();
+            button.setTextColor(linkColor);
+            parent.addView(button);
+
+        }
     }
 
     private boolean hasChanged(UiCode newCode, String qualifier) {
