@@ -5,7 +5,7 @@
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="?attr/standardPadding">
 
@@ -21,12 +21,14 @@
         <TextView
                 android:id="@+id/node_description"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:padding="?attr/standardPadding"/>
 
         <TextView
                 android:id="@+id/node_prompt"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:padding="?attr/standardPadding"/>
 
         <LinearLayout
                 android:id="@+id/input_container"
