@@ -30,7 +30,7 @@
         <LinearLayout
                 android:id="@+id/calculated_attribute_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingTop="32dp"/>
     </ScrollView>
