@@ -20,9 +20,10 @@ Install an update
 Changes
 -------
 
-2015-09-21
+2015-09-23
 
-    * Worked around Android bug in handling decimal separators others than dot "."
+    * Included support for comma as decimal separators
+    * Added dialog displaying code descriptions for a code attribute
 
 2015-09-15
 
